UI: Topic-star and menu cursor fix, also stars on topics are now only visible when logged in

--- a/wasa2il/core/static/css/application.css
+++ b/wasa2il/core/static/css/application.css
@@ -351,3 +351,6 @@ ul.errorlist {
 	font-weight: bold;
 }
 
+.glyphicon { cursor: pointer; }
+.dropdown-menu { cursor: pointer; }
+
